<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/detail_toolbar"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" app:title="@string/challenge_detail_title"
        app:navigationIcon="@drawable/ic_back" app:navigationContentDescription="@string/back_action" />
    <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@+id/detail_loading"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:indeterminate="true" android:contentDescription="@string/loading_challenges" />
...
