<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/home_title"
        app:titleTextColor="?attr/colorOnSurface" />
    <FrameLayout
        android:id="@+id/screen_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:menu="@menu/main_navigation"
        app:labelVisibilityMode="labeled"
        app:itemMaxLines="2"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/navigation_foreground"
        app:itemTextColor="?attr/colorOnSurface"
        app:itemActiveIndicatorStyle="@style/BountyNavigationIndicator" />
</LinearLayout>
